--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <body>
     <h1>饥荒挑战生成器</h1>
     <div class="challenge-container">
-        <button onclick="generateChallenge()">生成挑战test</button>
+        <button onclick="generateChallenge()">生成挑战test2</button>
         <div class="challenge-details">
             <h3>挑战目标：<span id="goal"></span></h3>
             <h3>世界配置：<span id="world_config"></span></h3>
